added rfid function and updated task.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza , Utkarsh Jyotishi</strong>.
+                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza Sogiyawala ,Utkarsh Jyotishi</strong>.
                 All Rights Reserved
             </div>
             <div class="credits">
