feat:added google form in add patient

--- a/templates/add_patient.html
+++ b/templates/add_patient.html
@@ -4,38 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - NFC Health Hub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- Add any additional meta tags, stylesheets, or scripts here -->
 </head>
 <body>
     <header id="header" class="header-scrolled">
         <div class="logo">
-            <h1><a href="#">Welcome to NFC Health Hub</a></h1>
+            <h1><a href="#">NFC Health Hub</a></h1>
+            <h2></h2>
         </div>
     </header>
 
-    <section id="dashboard" >
-        <h2>Dashboard</h2>
-        <div class="rfid">
-            <img src="assets/img/rfid.gif" style="height: 200px; border-radius: 25px;" alt="RFID Card">
-            <br>
-            Tap Patient Card
-        </div>
-        <br>
-        <a href="#" class="btn-get-started">Prescription</a>
-        <a href="add_patient.html" class="btn-get-started">Add Patient</a>
+    <section id="dashboard">
+        <h2>Add Patient</h2>
+        <style>
+            .ss-q-title,
+            .ss-secondary-text {
+                display: none !important;
+            }
+        </style>
+        
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScgZ3TKYxe44HGyBfdcTdzyO-liS4FWkoGZfWjVqQpQ8QoHRw/viewform?embedded=true" width="1540" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
         <!-- Add any dashboard content here -->
     </section>
 
     <!-- ======= Footer ======= -->
+    <!-- <section>
     <footer id="footer">
         <div class="container">
             <div class="copyright">
                 &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza , Utkarsh Jyotishi</strong>.
                 All Rights Reserved
             </div>
-        </div>
+            <div class="credits">
+                Designed For <a href="#jdm/JDM.html"><strong>Minor Project</strong></a>
+            </div> -->
+        <!-- </div>
     </footer>
+    </section>  -->
     <!-- End Footer -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
