--- a/templates/index.html
+++ b/templates/index.html
@@ -16,24 +16,26 @@
         <form id="loginForm" action="/login" method="post">
             <div>
                 <h3><img src="assets/img/SGSITS.png" alt="logo for sgsits" style="width: 100px;">
-                <br>Shri Govindram Seksaria Institute of Technology and Science</h3>
-                <h2>Login</h2>
+                <br>Shri Govindram Seksaria Institute of Technology and Science<br>
+                Department of Biomedical Engineering</h3>
             </div>
             <div>
+                <p>Login</p>
                 <input type="text" id="username" name="username" placeholder="Username" required>
                 <br>
                 <input type="password" id="password" name="password" placeholder="Password" required>
+                <br>
+                <button class="btn-get-started" type="submit">Login</button>
             </div>
-            <br>
-            <button class="btn-get-started" type="submit">Login</button>
+            
         </form>
-        {% if error %}
+        
+    </section>
+    {% if error %}
     <div class="error">{{ error }}</div>
     {% endif %}
-
-    </section>
-
     <!-- ======= Footer ======= -->
+    <section>
     <footer id="footer">
         <div class="container">
             <div class="copyright">
@@ -44,8 +46,9 @@
                 Designed For <a href="#jdm/JDM.html"><strong>Minor Project</strong></a>
             </div>
         </div>
-    </footer><!-- End Footer -->
-
+    </footer>
+    </section>
+    <!-- End Footer -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
 
