feat:test rfid file

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@
             Tap Patient Card
         </div>
         <br>
-        <a href="#" class="btn-get-started">Prescription</a>
+        <a href="patient_info.html" class="btn-get-started">Prescription</a>
         <a href="add_patient.html" class="btn-get-started">Add Patient</a>
         <!-- Add any dashboard content here -->
     </section>
