--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,7 +64,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza, Utkarsh Jyotishi</strong>.
+                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
                 All Rights Reserved
             </div>
         </div>
