--- a/templates/index.html
+++ b/templates/index.html
@@ -19,21 +19,22 @@
                 <br>Shri Govindram Seksaria Institute of Technology and Science<br>
                 Department of Biomedical Engineering</h3>
             </div>
-            <a href="login.html" type="button">Login</a>
+        </form>
+        <h5><img src="assets/login.gif" style="width: 300px;"><br><a href="login.html">Login</a></h5>
+        <br>
+        
+    </section>
+    
     <!-- ======= Footer ======= -->
     <section>
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong style="font-family: Eras ITC">Harshal Jain, Murtaza Sogiyawala ,Utkarsh Jyotishi</strong>.
+                &copy; Copyright <strong style="font-family: 'Eras ITC', sans-serif">Harshal Jain, Murtaza Sogiyawala, Utkarsh Jyotishi</strong>.
                 All Rights Reserved
             </div>
-            <!-- <div class="credits">
-                Designed For <a href="#jdm/JDM.html"><strong>Minor Project</strong></a>
-            </div> -->
         </div>
-    </footer>
-    </section>
+    </footer></section>
     <!-- End Footer -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
