--- a/templates/login.html
+++ b/templates/login.html
@@ -13,26 +13,27 @@
     </header>
 
     <section id="login">
-        <form id="loginForm" action="/login" method="post">
-            <div>
-                <h3><img src="assets/img/SGSITS.png" alt="logo for sgsits" style="width: 100px;">
-                <br>Shri Govindram Seksaria Institute of Technology and Science<br>
-                Department of Biomedical Engineering</h3>
-            </div>
-            <div>
-                <p>Login</p>
-                <input type="text" id="username" name="username" placeholder="Username" required>
+        <div>
+            <h3><img src="assets/img/SGSITS.png" alt="logo for sgsits" style="width: 100px;">
+            <br>Shri Govindram Seksaria Institute of Technology and Science<br>
+            Department of Biomedical Engineering</h3>
+        </div>
+        <div>
+            <form id="loginForm" action="/login" method="post">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
                 <br>
-                <input type="password" id="password" name="password" placeholder="Password" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 <br>
                 <button class="btn-get-started" type="submit">Login</button>
-            </div>
-            
-        </form>
-        {% if error %}
-    <div class="error">{{ error }}</div>
-    {% endif %}
+            </form>
+            {% if error %}
+            <div class="error">{{ error }}</div>
+            {% endif %}
+        </div>
     </section>
+    
     
     <!-- ======= Footer ======= -->
     <section>
