fix: ui and ux of patient info

--- a/templates/patient_info.html
+++ b/templates/patient_info.html
@@ -70,10 +70,11 @@
                 </form>
             </ul>
             <br>
-            <img src="assets/prescription.gif" style="scale: 80%;"><br>
+            <img src="assets/prescription.gif" style="scale: 80%;border-radius: 25px;"><br>
         </div>
+
         {% else %}
-        <p>No patient data found.</p>
+        <H1 style="text-align: center;color: red;">No patient data found.</H1>
         {% endif %}
     
         <div id="message"></div>
